# COSMol-viewer

./: .gitignore  Cargo.toml  README.md  output.sdf  test.py
.github/workflows/: CI.yml  py-docs.yml  python-publish.yml  python-publish_test.yml
.zed/: settings.json
cosmol_viewer/: Cargo.toml  build.rs
cosmol_viewer/examples/: 2AMD.cif  2AMD_ligand.sdf  6fi1.cif  6fi1_ligand.sdf  animation.py  animation.rs  animation_manual_update.py  animation_manual_update.rs  example.sdf  protein_ligand.py  protein_ligand.rs  render_molecule.py  render_molecule.rs  render_protein.py  render_protein.rs
cosmol_viewer/src/: lib.rs
cosmol_viewer_python/: pyproject.toml
cosmol_viewer_wasm/: Cargo.toml
cosmol_viewer_wasm/src/: lib.rs
cosviewer_core/: Cargo.toml
cosviewer_core/src/: lib.rs
cosviewer_core/src/triangle/: app.rs
cosviewer_python/: Cargo.toml  build.rs  pyproject.toml
cosviewer_python/src/: lib.rs
cosviewer_wasm/: Cargo.toml
cosviewer_wasm/src/: lib.rs
crates/core/: Cargo.toml  build.rs
crates/core/src/: lib.rs  scene.rs  utils.rs
crates/core/src/parser/: CompSS.rs  compute_secondary_structure.rs  mmcif.rs  mod.rs  protein.rs  sdf.rs
crates/core/src/shader/: canvas.rs  vertex_sphere.glsl
crates/core/src/shapes/: molecules.rs  protein.rs  sphere.rs  stick.rs
crates/gui/: Cargo.toml
crates/gui/src/: main.rs
crates/python/: Cargo.toml  README.md  build.rs  cosmol_viewer.pyi  cosmol_viewer_.pyi  pyproject.toml
crates/python/src/: lib.rs  render_molecule.py  shapes.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: js_bridge.rs  lib.rs  utils.rs  wasm.rs
docs/: cosmol_viewer.html  search.js
examples/python/: animation.py  mol.py  test.py
examples/rust/: Cargo.toml
examples/rust/src/: main.rs
examples/test/: Cargo.toml
examples/test/src/: main.rs
