[workspace.package]
edition = "2024"
version = "0.1.1"
authors = ["9028 wjt@cosmol.org"]
repository = "https://github.com/COSMol-repl/COSMol-viewer"
homepage = "https://github.com/COSMol-repl/COSMol-viewer"
keywords = ["molecular", "visualization"]
license = "MIT OR Apache-2.0"
description = "Molecular visualization tools by rust"

[workspace]
resolver = "2"
members = [
    "cosmol_viewer", 
    "crates/core",
    "crates/python",
    "crates/wasm",
    "crates/gui",
    "examples/rust",
    ]

[workspace.dependencies]
cosmol_viewer = { version = "*", path = "cosmol_viewer"}
cosmol_viewer_core = { version = "*", path = "crates/core" }

eframe = { version = "0.31.1"}
egui_extras = { version = "0.31.1", features = ["svg"] }
serde = { version = "1.0.219" , features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
hex = "0.4.3"
ipc-channel = "0.20.0"