[workspace.package]
edition = "2024"
version = "0.1.4"
authors = ["9028 wjt@cosmol.org"]
repository = "https://github.com/COSMol-repl/COSMol-viewer"
homepage = "https://github.com/COSMol-repl/COSMol-viewer"
keywords = ["molecular", "visualization"]
license = "MIT OR Apache-2.0"
description = "Molecular visualization tools by rust"

[workspace]
resolver = "2"
members = [
    "cosmol_viewer",
    "crates/core",
    "crates/python",
    "crates/wasm",
    ]

[workspace.dependencies]
cosmol_viewer = { version = "0.1.4", path = "cosmol_viewer"}
cosmol_viewer_core = { version = "0.1.4", path = "crates/core" }

eframe = { version = "0.33.0", features = ["wayland","x11"] }
pyo3 = { version = "0.27.1", features = ["extension-module", "abi3-py37"] }
egui-winit = { version = "0.33.0", features = ["wayland","x11"] }
egui_extras = { version = "0.33.0" }
serde = { version = "1.0.228" , features = ["derive"] }
serde_json = "1.0.145"
base64 = "0.22.1"
