[package]
name = "cosmol_viewer"
version.workspace = true
edition.workspace = true
authors = ["9028 <wjt@cosmol.org>"]
homepage = "https://github.com/COSMol-repl/COSMol-viewer"
keywords = ["molecular", "visualization"]
readme = "../README.md"
description.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
cosmol_viewer_core.workspace = true
eframe.workspace = true
serde_json.workspace = true
egui_extras.workspace = true
sha2.workspace = true
hex.workspace = true
serde = { version = "1.0.219" , features = ["derive"] }
bytemuck = "1.23.1"
web-sys = "0.3.77"
wasm-bindgen-futures = "0.4.50"
ipc-channel.workspace = true