[package]
name = "cosmol_viewer"
version.workspace = true
edition.workspace = true
authors = ["9028 <wjt@cosmol.org>"]
homepage = "https://github.com/COSMol-repl/COSMol-viewer"
keywords = ["molecular", "visualization"]
readme = "../README.md"
description.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
eframe.workspace = true
cosmol_viewer_core.workspace = true
serde_json.workspace = true
egui_extras.workspace = true
serde = { workspace = true, features = ["derive"] }
bytemuck = "1.23.1"
wasm-bindgen-futures = "0.4.50"
bio_files = "0.3.4"

[features]
default = []
wayland = ["cosmol_viewer_core/wayland"]
x11 = ["cosmol_viewer_core/x11"]
