[package]
name = "cosmol_viewer_core"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
eframe.workspace = true
serde_json.workspace = true
egui_extras.workspace = true
serde.workspace = true
base64.workspace = true
thiserror.workspace = true

glam = { version = "0.30.10" , features = ["serde", "bytemuck"] }
regex = "1.12.2"
na_seq = "0.3.12"
bytemuck = "1.24.0"
serde_repr = "0.1.20"
once_cell = "1.21.3"
wide = "0.8.3"
kiddo = "5.2.4"
image = "0.25.9"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
egui-winit.workspace = true

[features]
default = []
wayland = []
x11 = []
