[package]
name = "cosmol_viewer_gui"
version.workspace = true
edition = "2024"
publish = false

[dependencies]
cosmol_viewer_core = { path = "../core" }
eframe.workspace = true
serde_json.workspace = true
egui_extras.workspace = true
serde = { version = "1.0.219" , features = ["derive"] }
bytemuck = "1.23.1"
web-sys = "0.3.77"
wasm-bindgen-futures = "0.4.50"
ipc-channel.workspace = true
