[package]
name = "cosmol_viewer_python"
edition.workspace = true
publish = false

[dependencies]
cosmol_viewer_wasm = { path = "../wasm", default-features = false, features = ["js_bridge"] }
cosmol_viewer_core.workspace = true
egui_extras.workspace = true
serde_json.workspace = true
base64.workspace = true
eframe.workspace = true
pyo3.workspace = true

[lib]
name = "cosmol_viewer"
crate-type = ["cdylib"]

[features]
default = []
wayland = ["cosmol_viewer_core/wayland"]
x11 = ["cosmol_viewer_core/x11"]

[profile.release]
lto = "fat"              # 以前叫 "full"，现在推荐写 fat
codegen-units = 1        # 必须和 fat LTO 一起开才有效
panic = "abort"          # 二进制体积暴降，Python 侧反正会接管 panic
strip = "symbols"        # 去掉 debug symbols
opt-level = "z"          # 体积党终极选择，速度损失 <1%
incremental = false
