[project]
name = "cosmol-viewer"
version = "0.1.3.dev1"
description = "Molecular visualization tools"
authors = [{name = "95028", email = "wjt@cosmol.org"}]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
name = "cosmol_viewer"

[project.urls]
Repository = "https://github.com/COSMol-repl/COSMol-viewer"